--- a/Changelog.txt
+++ b/Changelog.txt
@@ -120,10 +120,11 @@
 	CHG: ZEArrayVertexBuffer now inherits from both ZEDynamicVertexBuffer and ZEArray. Now itself acts as array. Vertices member variable has been removed.
 	CHG: ZEScene Visual Debug Elemens rendering mechanisim has been changed. This mechanisim moved to new class ZESceneDebugDraw. ZESceneDebugDraw uses simple material and vertex colored canvas and draws all visual debug elements in single draw call.
    
-[13 March 2010 - Revision 119]
+[13 March 2010 - Revision 119, 121, 122]
 	CHG: Major error reporting and error handling improvements.
 	CHG: Minor notation and coding style improvements. (Mostly ZEDEBUG, ZECore and ZEError enumurators)
-	
-[13 March 2010 - Revision 121]
 	FIX: Window Console appending test at the cursor location has been fixed. Now it appends at the end of the textbox.
 	FIX: ZESDK linkage error. Missing source files has been added to ZESDK project.
+	FIX: Window Console appending test at the cursor location has been fixed. Now it appends at the end of the textbox.
+	FIX: ZESDK linkage error. Missing source files has been added to ZESDK project.
+	FIX: Minor project configuration bugs. No WIN32 and _DEBUG/NDEBUG definitions in ZESDK. CONSOLE definition on Zinek Engine project.
