FIX: ZESimpleMaterial Update bug fixed. FIX: ZEScene memory corruption on shutdown bug fixed. FIX: ZEColoredVertex vertex declaration bug fixed. FIX: ZED3D9FixedMaterial and ZED3D9SimpleMaterial ZERenderOrder flags ZE_ROF_VIEWPORT_TRANSFORM and ZE_ROF_WORLD_TRANSFORM bugs fixed. FIX: ZEPhysicalWorld Debug Render no output bug fixed.
svn path=/trunk/; revision=127

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -120,7 +120,7 @@
 	CHG: ZEArrayVertexBuffer now inherits from both ZEDynamicVertexBuffer and ZEArray. Now itself acts as array. Vertices member variable has been removed.
 	CHG: ZEScene Visual Debug Elemens rendering mechanisim has been changed. This mechanisim moved to new class ZESceneDebugDraw. ZESceneDebugDraw uses simple material and vertex colored canvas and draws all visual debug elements in single draw call.
    
-[13 March 2010 - Revision 119, 121, 122]
+[13 March 2010 - Revision 119, 121, 122, 126]
 	CHG: Major error reporting and error handling improvements.
 	CHG: Minor notation and coding style improvements. (Mostly ZEDEBUG, ZECore and ZEError enumurators)
 	FIX: Window Console appending test at the cursor location has been fixed. Now it appends at the end of the textbox.
@@ -128,6 +128,7 @@
 	FIX: Window Console appending test at the cursor location has been fixed. Now it appends at the end of the textbox.
 	FIX: ZESDK linkage error. Missing source files has been added to ZESDK project.
 	FIX: Minor project configuration bugs. No WIN32 and _DEBUG/NDEBUG definitions in ZESDK. CONSOLE definition on Zinek Engine project.
-
-[13 March 2010 - Revision 126]
-	FIX: Map.cpp material bug fixed.
+	FIX: ZESimpleMaterial Update bug fixed.
+	FIX: ZEScene memory corruption on shutdown bug fixed.
+	FIX: ZEColoredVertex vertex declaration bug fixed.
+	FIX: ZEPhysicalWorld Debug Render no output bug fixed
