FIX: New scene instance created each time when game initializes. (Memory leak) FIX: ZEPhysicalWorld crash when initializing game more than once.
svn path=/trunk/; revision=137

--- a/Changelog.txt
+++ b/Changelog.txt
@@ -187,4 +187,8 @@
 	FIX: FixedMaterial PreLightning Vertex shader Reflection and Refreaction problem fixed.
 
 [24 March 2010 - Revision 136]
-  ADD: Affected bone mechanism added to ZEModelLODMesh. Each skinned mesh in a model has it own bone indices values other than ZEModel bone indices. Only bones that affect mesh has been used weighting the mesh.
+	ADD: Affected bone mechanism added to ZEModelLODMesh. Each skinned mesh in a model has it own bone indices values other than ZEModel bone indices. Only bones that affect mesh has been used weighting the mesh.
+  
+[25 March 2010 - Revision 137]
+	FIX: New scene instance created each time when game initializes. (Memory leak)
+	FIX: ZEPhysicalWorld crash when initializing game more than once.
