--- a/Changelog.txt
+++ b/Changelog.txt
@@ -192,3 +192,12 @@
 [25 March 2010 - Revision 137]
 	FIX: New scene instance created each time when game initializes. (Memory leak)
 	FIX: ZEPhysicalWorld crash when initializing game more than once.
+
+[25 March 2010 - Revision 138]
+  FIX: Light culling fixed in Scene.
+  FIX: View Volumes culling test fixed.
+  FIX: D3D9RendererBase::Renderer lightning problem fixed.
+  FIX: D3D9FixedMaterial crash when NULL textures given has been fixed.
+  BUG: View Cone sphere intersection test in ZEViewFrustrum.
+  FIX: Major fixes and improvements on ZEModel skinned meshes.
+  BUG: Skining does not work while animating.
